<resources>
    <string name="app_name">MadDev</string>
    <string name="blank_label"></string>
    <string name="notes_list_title">My Notes</string>
    <string name="title_text">Title</string>
    <string name="description_text">Description</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="text_blue">Blue</string>
    <string name="text_red">Red</string>
    <string name="text_yellow">Yellow</string>
    <string name="text_green">Green</string>
    <string name="text_white">White</string>
    <string name="text_all">All</string>
    <string name="empty_fields_title">Empty fields</string>
    <string name="empty_fields_text">You need to set a title or a description to save the note</string>
    <string name="empty_fields_button">Understood</string>
</resources>